# nd-rust

./: .cursorrules  .env  .gitignore  Cargo.toml  README.md  config.yaml  docker-compose.yml  init-db.sql
.cursor/rules/: design.mdc  interface.mdc  rust.mdc  snmp.mdc
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/nd_core/: Cargo.toml
crates/nd_core/src/: discovery.rs  interfaces.rs  lib.rs  snmp.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: coding.md  design.md  design_doc.md  design_doc_backup.md  design_doc_cli.md  design_doc_config_mgmt.md  design_doc_firmware.md  design_doc_inventory.md  design_doc_monitoring.md  design_doc_netconf.md  design_doc_network_viz.md  design_doc_reporting.md  design_doc_rest_api.md  design_doc_user_management.md  interfaces.md  old_todo.md  test_suite.md  todo.md
migrations/: 20250415182120_initial_schema.down.sql  20250415182120_initial_schema.up.sql
src/: main.rs
