[package]
name = "nd_core"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.14", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

thiserror = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["rt", "net", "time"] }
tracing = "0.1"
