[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
nd_core = { path = "../nd_core" }
db = { path = "../db" }

axum = "0.7"
tokio = { version = "1", features = ["full"] } # Use full feature for axum
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For axum::Json
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1" # For logging in handlers/middleware
uuid = { version = "1", features = ["serde"] } # For Path extractor

# Add any other web-specific dependencies here later
